<resources>
    <string name="app_name">StoryAppSubmission</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="signup">Sign Up</string>
    <string name="tv_to_login">Sudah Punya Akun? Login disini</string>
    <string name="login">Login</string>
    <string name="logo_app">Logo App</string>
    <string name="empty_name">Nama tidak boleh Kosong!</string>
    <string name="empty_email">Email tidak boleh kosong!</string>
    <string name="empty_password">Password tidak boleh kosong!</string>
    <string name="success">Sukses</string>
    <string name="ok">OK</string>
    <string name="success_registration">Registrasi Berhasil!</string>
    <string name="greeting">Halo, %1$s !</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_to_register">Belum punya Akun? Daftar disini</string>
    <string name="welcome">Selamat Datang! Silahkan Login</string>
    <string name="register">Daftarkan Akun Anda!</string>
    <string name="username">Username</string>
    <string name="upload_date">Upload date</string>
    <string name="description">Description</string>
    <string name="camera">Camera</string>
    <string name="gallery">gallery</string>
    <string name="upload">upload</string>
    <string name="upload_warning">Masukkan berkas gambar terlebih dahulu!</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>